<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/addCourseTitleLabel"
        style="@style/GolfPS.ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_course_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/app_surface"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseTitleLabel">

        <TextView
            android:id="@+id/courseNameTitle"
            style="@style/GolfPS.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_name_label" />

        <EditText
            android:id="@+id/courseNameEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/app_input_background"
            android:ems="10"
            android:hint="@string/course_select_search_hint"
            android:inputType="text"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/text"
            android:textColorHint="@color/muted_text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/cityTitle"
            style="@style/GolfPS.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/add_course_city_label" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/app_input_background"
            android:ems="10"
            android:hint="@string/add_course_city_hint"
            android:inputType="text"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/text"
            android:textColorHint="@color/muted_text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/stateNameTitle"
            style="@style/GolfPS.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/add_course_state_label" />

        <EditText
            android:id="@+id/stateEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/app_input_background"
            android:ems="10"
            android:hint="@string/add_course_state_hint"
            android:inputType="text"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/text"
            android:textColorHint="@color/muted_text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/countryTitle"
            style="@style/GolfPS.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/add_course_country_label" />

        <EditText
            android:id="@+id/countryEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/app_input_background"
            android:ems="10"
            android:hint="@string/add_course_country_hint"
            android:inputType="text"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/text"
            android:textColorHint="@color/muted_text"
            android:singleLine="true"
            android:text="USA" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitRequestButton"
        style="@style/GolfPS.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_course_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelRequestButton"
        style="@style/GolfPS.TextButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_course_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitRequestButton" />

    <TextView
        android:id="@+id/textView"
        style="@style/GolfPS.BodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_course_request_message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelRequestButton"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.cardview.widget.CardView
        android:id="@+id/progressCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
