<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.AddClubActivity">

    <TextView
        android:id="@+id/addClubTitleLabel"
        style="@style/GolfPS.ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_club_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/addClubFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/app_surface"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addClubTitleLabel">

        <TextView
            android:id="@+id/clubNameTitle"
            style="@style/GolfPS.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_club_name_label" />

        <EditText
            android:id="@+id/clubNameEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/app_input_background"
            android:hint="@string/add_club_name_hint"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/text"
            android:textColorHint="@color/muted_text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/clubDistanceTitle"
            style="@style/GolfPS.SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_club_distance_label" />

        <EditText
            android:id="@+id/clubDistanceEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/app_input_background"
            android:hint="@string/add_club_distance_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/text"
            android:textColorHint="@color/muted_text"
            android:singleLine="true" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addClubSubmitButton"
        style="@style/GolfPS.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_club_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addClubFields" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addClubCancelButton"
        style="@style/GolfPS.TextButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_club_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addClubSubmitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
